# MPI-OpenMP-Skeletons

./: .gitignore  CMakeLists.txt  README.md  helloworld.cpp  main.cpp  mpi-openmp.cpp  sequential_comparison.cpp  simple_openmp.cpp  testing.cpp
include/: Utils.hpp  VectorDistribution.hpp  functors.hpp
src/: Utils.cpp  VectorDistribution.cpp
